paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:8:5
   |
 8 | /     unsafe {
 9 | |         let v = *p;
10 | |         if v & 1 != 0 {
11 | |             v + bias
...  |
15 | |     }
   | |_____^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:59:5
   |
59 | /     unsafe {
60 | |         if *b.p_to_const != 10 {
61 | |             std::process::exit(2);
62 | |         }
63 | |     }
   | |_____^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:72:5
   |
72 | /     unsafe {
73 | |         if *b.p_to_const != 21 {
74 | |             std::process::exit(3);
75 | |         }
76 | |     }
   | |_____^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:84:5
   |
84 | /     unsafe {
85 | |         if *b.p_to_const != 21 {
86 | |             std::process::exit(4);
87 | |         }
88 | |     }
   | |_____^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:90:5
   |
90 | /     unsafe {
91 | |         *b.const_p += 5;
92 | |     }
   | |_____^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:97:5
   |
97 | /     unsafe {
98 | |         *b.const_p_via_typedef += 7;
99 | |     }
   | |_____^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:108:5
    |
108 | /     unsafe {
109 | |         if *b.p_to_const != 21 {
110 | |             std::process::exit(8);
111 | |         }
112 | |     }
    | |_____^

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:42:9
   |
42 |     let mut y: i32 = 21;
   |         ----^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `b`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:60:12
   |
49 |     let b = Bundle {
   |         - move occurs because `b` has type `Bundle`, which does not implement the `Copy` trait
...
55 |     if check_bundle(b, &x as *const i32) != 0 {
   |                     - value moved here
...
60 |         if *b.p_to_const != 10 {
   |            ^^^^^^^^^^^^^ value used here after move
   |
note: consider changing this parameter type in function `check_bundle` to borrow instead if owning the value isn't necessary
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:30:20
   |
30 | fn check_bundle(b: Bundle, expected_const_p_target: *const i32) -> i32 {
   |    ------------    ^^^^^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `Bundle` implemented `Clone`, you could clone the value
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:1:1
   |
 1 | struct Bundle {
   | ^^^^^^^^^^^^^ consider implementing `Clone` for this type
...
55 |     if check_bundle(b, &x as *const i32) != 0 {
   |                     - you could clone this value

error[E0382]: use of moved value: `b`
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:109:12
    |
 65 |     let mut b = b;
    |         ----- move occurs because `b` has type `Bundle`, which does not implement the `Copy` trait
...
104 |     if check_bundle(b, &x as *const i32) != 0 {
    |                     - value moved here
...
109 |         if *b.p_to_const != 21 {
    |            ^^^^^^^^^^^^^ value used here after move
    |
note: consider changing this parameter type in function `check_bundle` to borrow instead if owning the value isn't necessary
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:30:20
    |
 30 | fn check_bundle(b: Bundle, expected_const_p_target: *const i32) -> i32 {
    |    ------------    ^^^^^^ this parameter takes ownership of the value
    |    |
    |    in this function
note: if `Bundle` implemented `Clone`, you could clone the value
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_002/target.rs:1:1
    |
  1 | struct Bundle {
    | ^^^^^^^^^^^^^ consider implementing `Clone` for this type
...
104 |     if check_bundle(b, &x as *const i32) != 0 {
    |                     - you could clone this value

error: aborting due to 9 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0382`.